hyperlinks to website working correctly?

--- a/index.html
+++ b/index.html
@@ -2,16 +2,76 @@
 
 <img src=https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.wistv.com%2Fsports%2Fbetting%2F2023%2F10%2F08%2Fmiles-sanders-nfl-week-5-injury-update%2F&psig=AOvVaw1PCfPjb-5-SkDFUyhl-Sxs&ust=1697783875230000&source=images&cd=vfe&>
 
-<p>Lets learn about each NFL team and a brief history of each one!</p>
+<p>Live Rankings and Records of each NFL Team! Click your favorite team to get latest news and updates!</p>
 
 <h2>AFC North</h2>
 
-<ul>
-    <li>Cincinati Bengals</li>
-    <li> Pittsburgh Steelers</li>
-    <li>Baltimore Ravens</li>
-    <li>Cleveland Browns</li>
-</ul>
+<ol type ="1">
+    <li> <a href=https://www.baltimoreravens.com/>Baltimore Ravens</a> 5-2</li>
+    <li> <a href=https://www.steelers.com/> Pittsburgh Steelers</a> 4-2</li>
+    <li> <a href=https://www.clevelandbrowns.com/> Cleveland Browns</a> 4-2</li>
+    <li> <a href=https://www.bengals.com/> Cincinnati Bengals</a> 3-3</li>
+</ol>
+ 
+<h2>AFC South</h2>
 
-<h2></h2>
+<ol type ="1">
+    <li> <a href=https://www.jaguars.com/> Jacksonville Jaguars</a> 5-2</li>
+    <li> <a href=https://www.houstontexans.com/> Houston Texans</a> 3-3</li>
+    <li> <a href=https://www.colts.com/> Indianapolis Colts</a> 3-4</li>
+    <li> <a href=https://www.tennesseetitans.com/> Tennessee Titans</a> 2-4</li>
+</ol>
 
+<h2>AFC East</h2>
+
+<ol type ="1">
+    <li>Miami Dolphins</li>
+    <li>Buffalo Bills</li>
+    <li>New York Jets</li>
+    <li>New England Patriots</li>
+</ol>
+
+<h2>AFC West</h2>
+
+<ol type ="1">
+    <li>Kansa City Chiefs</li>
+    <li>Las Vegas Raiders</li>
+    <li>Los Angeles Chargers</li>
+    <li>Denver Broncos</li>
+</ol>
+
+<h2>NFC North</h2>
+
+<ol type ="1">
+    <li>Detroit Lions</li>
+    <li>Minnesota Vikings</li>
+    <li>Green Bay Packers</li>
+    <li>Chicago Bears</li>
+</ol>
+
+<h2>NFC South</h2>
+
+<ol type ="1">
+    <li>Atlanta Falcons</li>
+    <li>Tampa Bay Buccaneers</li>
+    <li>New Orleans Saints</li>
+    <li>Carolina Panthers</li>
+</ol>
+
+<h2>NFC East</h2>
+
+<ol type ="1">
+    <li>Philadelphia Eagles</li>
+    <li>Dallas Cowboys</li>
+    <li>Washington Commanders</li>
+    <li>New York Giants</li>
+</ol>
+
+<h2>NFC West</h2>
+
+<ol type ="1">
+    <li>San Francisco 49ers</li>
+    <li>Seattle Seahawks</li>
+    <li>Los Angeles Rams</li>
+    <li>Arizona Cardinals</li>
+</ol>
