color and emoji added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <style>
+    body {
+        background-color: rgb(10, 10, 10)
+    }
+
+    h1 {
+        color: rgb(248, 244, 244);
+        text-align: center;
+    }
+
+    p {
+      text-align: center;
+    }
+    </style>
         <title>NFL Rankings</title>
     </head>
     <body>
@@ -13,73 +27,73 @@
 <p>Live Rankings and Records of each NFL Team! Click your favorite team to get latest news and updates!</p>
 
 <section>
-<h2>AFC North</h2>
+<h2 style="color:rgb(51, 7, 51)">AFC North</h2>
 
 <ol type ="1">
-    <li> <a href=https://www.baltimoreravens.com/>Baltimore Ravens</a> 5-2</li>
+    <li> <a href=https://www.baltimoreravens.com/>Baltimore Ravens</a> 5-2 &#127942</li>
     <li> <a href=https://www.steelers.com/> Pittsburgh Steelers</a> 4-2</li>
     <li> <a href=https://www.clevelandbrowns.com/> Cleveland Browns</a> 4-2</li>
     <li> <a href=https://www.bengals.com/> Cincinnati Bengals</a> 3-3</li>
 </ol>
 </section>
-<h2>AFC South</h2>
+<h2 style="color:rgb(22, 112, 112)">AFC South</h2>
 
 <ol type ="1">
-    <li> <a href=https://www.jaguars.com/> Jacksonville Jaguars</a> 5-2</li>
+    <li> <a href=https://www.jaguars.com/> Jacksonville Jaguars</a> 5-2 &#127942</li>
     <li> <a href=https://www.houstontexans.com/> Houston Texans</a> 3-3</li>
     <li> <a href=https://www.colts.com/> Indianapolis Colts</a> 3-4</li>
     <li> <a href=https://www.tennesseetitans.com/> Tennessee Titans</a> 2-4</li>
 </ol>
 
-<h2>AFC East</h2>
+<h2 style="color:aqua">AFC East</h2>
 
 <ol type ="1">
-    <li> <a href=https://www.miamidolphins.com/> Miami Dolphins</a> 5-2</li>
+    <li> <a href=https://www.miamidolphins.com/> Miami Dolphins</a> 5-2 &#127942</li>
     <li> <a href=https://www.buffalobills.com/> Buffalo Bills</a> 4-3</li>
     <li> <a href=http://www.newyorkjets.com/> New York Jets</a> 3-3</li>
     <li> <a href=http://www.patriots.com/> New England Patriots</a> 2-5</li>
 </ol>
 
-<h2>AFC West</h2>
+<h2 style="color:red">AFC West</h2>
 
 <ol type ="1">
-    <li> <a href=https://www.chiefs.com/> Kansas City Chiefs</a> 6-1</li>
+    <li> <a href=https://www.chiefs.com/> Kansas City Chiefs</a> 6-1 &#127942</li>
     <li> <a href=http://www.raiders.com/> Las Vegas Raiders</a> 3-4</li>
     <li> <a href=https://www.chargers.com/> Los Angeles Chargers</a> 2-4</li>
     <li> <a href=http://www.denverbroncos.com/> Denver Broncos</a> 2-5</li>
 </ol>
 
-<h2>NFC North</h2>
+<h2 style="color:rgb(92, 92, 240)">NFC North</h2>
 
 <ol type ="1">
-    <li> <a href=https://www.detroitlions.com/> Detroit Lions</a> 5-2</li>
+    <li> <a href=https://www.detroitlions.com/> Detroit Lions</a> 5-2 &#127942</li>
     <li> <a href=http://www.vikings.com/> Minnesota Vikings</a> 3-4</li>
     <li> <a href=http://www.packers.com/> Green Bay Packers</a> 2-4</li>
     <li> <a href=http://www.chicagobears.com/> Chicago Bears</a> 2-5</li>
 </ol>
 
-<h2>NFC South</h2>
+<h2 style="color:rgb(97, 10, 10)">NFC South</h2>
 
 <ol type ="1">
-    <li> <a href=http://www.atlantafalcons.com/> Atlanta Falcons</a> 4-3</li>
+    <li> <a href=http://www.atlantafalcons.com/> Atlanta Falcons</a> 4-3 &#127942</li>
     <li> <a href=http://www.buccaneers.com/> Tampa Bay Buccaneers</a> 3-3</li>
     <li> <a href=https://www.neworleanssaints.com/> New Orleans Saints</a> 3-4</li>
     <li> <a href=https://www.panthers.com/> Carolina Panthers</a> 0-6</li>
 </ol>
 
-<h2>NFC East</h2>
+<h2 style="color:rgb(8, 78, 8)">NFC East</h2>
 
 <ol type ="1">
-    <li> <a href=http://www.philadelphiaeagles.com/> Philadelphia Eagles</a> 6-1</li>
+    <li> <a href=http://www.philadelphiaeagles.com/> Philadelphia Eagles</a> 6-1 &#127942</li>
     <li> <a href=http://www.dallascowboys.com/> Dallas Cowboys</a> 4-2</li>
     <li> <a href=https://www.commanders.com/> Washington Commanders</a> 3-4</li>
     <li> <a href=http://www.giants.com/> New York Giants</a> 2-5</li>
 </ol>
 
-<h2>NFC West</h2>
+<h2 style="color:rgb(119, 41, 41)">NFC West</h2>
 
 <ol type ="1">
-    <li> <a href=http://www.49ers.com/> San Francisco 49ers</a> 5-2</li>
+    <li> <a href=http://www.49ers.com/> San Francisco 49ers</a> 5-2 &#127942</li>
     <li> <a href=http://www.seahawks.com/> Seattle Seahawks</a> 4-2</li>
     <li> <a href=http://www.therams.com/> Los Angeles Rams</a> 3-4</li>
     <li> <a href=https://www.azcardinals.com/> Arizona Cardinals</a> 1-6</li>
