rankings color fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     }
 
     p {
+      color:white;
       text-align: center;
+    }
+
+    li {
+        color:white
     }
     </style>
         <title>NFL Rankings</title>
