quick color change black background was too harsh

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <style>
     body {
-        background-color: rgb(10, 10, 10)
+        background-color: rgba(17, 17, 17, 0))
     }
 
     h1 {
@@ -32,7 +32,7 @@
 <p>Live Rankings and Records of each NFL Team! Click your favorite team to get latest news and updates!</p>
 
 <section>
-<h2 style="color:rgb(51, 7, 51)">AFC North</h2>
+<h2 style="color:rgb(104, 13, 104)">AFC North</h2>
 
 <ol type ="1">
     <li> <a href=https://www.baltimoreravens.com/>Baltimore Ravens</a> 5-2 &#127942</li>
