--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <style>
     body {
-        background-color: rgba(17, 17, 17, 0))
+        background-color: rgba(10, 10, 10, 0.397)
     }
 
     h1 {
