--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<script>
+    if (confirm("Is your Favorite Team the Carolina Panthers?")) {
+        document.write(Yikes...Better luck next year &#128531);
+    } else {
+        document.write("I hope your team wins their next game!");
+    }
+</script>
 <html>
     <head>
     <style>
