--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+
 <script>
     if (confirm("Is your Favorite Team the Carolina Panthers?")) {
-        document.write(Yikes...Better luck next year &#128531);
+        document.write("Yikes...Better luck next year &#128531");
     } else {
         document.write("I hope your team wins their next game!");
     }
